python/testData/highlighting/namedUnicode.py
import re
re.match(r'\N{LESS-THAN SIGN}', '<')
re.match(r'\N{<error descr="Unknown character name">LESS-THAN SIG</error>}', '<')